--- a/css/styles.css
+++ b/css/styles.css
@@ -21,19 +21,33 @@ h1{
     margin-top: 0;
 }
 
+a {
+    text-decoration: none;
+    color: #234b09;
+}
+
 a:hover{
-    color: #004d26;
-    transition: 2.5s;
+    color: coral;
+    transition: 1s;
 }
 
 a:active{
-    color:coral;
+    color:rgb(90, 92, 247);
+    transition: 0s;
 }
 
 footer{
+    margin-bottom: 2em;
     border-top: solid 2px grey;
 }
 
+footer li{
+    padding: .6em;
+}
+
+footer h4{
+    margin-bottom: 1em;
+}
 /* CLASS SELECTORS */
 
 .main-nav li{
@@ -45,7 +59,6 @@ footer{
     display: block;
     padding: .75em;
     font-size: 1.2em;
-    text-decoration: none;
 }
 
 .wrapper {
@@ -55,31 +68,73 @@ footer{
     text-align: center;
 }
 
-.content-image,
 .profile-pic{
-    max-width: 80%;
-    margin-top: 5em;
+    width: 95%;
+}
+
+.content-image{
+    width: 90%;
+    margin-top: 3em;
 }
 
 .contact{
-    margin: 5em 0 5em;
+    margin: 4em 0;
+}
+
+.contact ul,
+.contact li{
+    margin-top: 1em;
 }
 
 .skills {
-    margin-top: 5em;
+    margin: 4em 0;
 }
 
-.foot-content{
+.skills li {
+    background-color: grey;
     display: inline-block;
+    margin-top: 5px;
+    padding: 5px;
+    border-radius: 3px;
 }
+
+.skills li:nth-child(odd) { background:forestgreen}
 
 /* @media styles */
 
 @media screen and (min-width: 768px) {
 
-    .container{
-        float:left;
+    body{
+        font-size: 1.08em;
+    }
+
+    .container-1,
+    .intro{
+        float:right;
+        text-align: left;
+    }
+
+    .intro{
+        width:65%;
+    }
+
+    .intro p{
+        padding-right:;
+    }
+
+    .container-1{
+        text-align:center;
+        width:35%;
+    }
+    
+    .container-2{
+        float:right;
         width: 50%;
+        padding-bottom: 1.06em;
+    }
+
+    .container-2 p{
+        padding: 0 5px;
     }
 
     .group:after {
@@ -90,27 +145,59 @@ footer{
 
     .skills,
     .contact{
-        width:100%;
+        margin:auto;
+        width:80%;
     }
 
+    footer {`
+        margin-top: 3em;
+    }
 
+    footer h4, 
+    footer ul{
+    display: inline-block;
+    }
+
+    footer h4{
+        float:left;
+    }
+    
+    footer nav {
+        float: right;
+    }
+    
+    footer li{
+        padding: 1.33em 0 0 0;
+        margin-left: 4em;
+        display: inline-block;
+    
+    }
 }    
-
 
 @media screen and (min-width: 1024px) {
 
-    .container{
+
+    body{
+        font-size: 1.3
+        em;
+    }
+    .container-2{
         float: left;
         width: 33%;
     }
 
     .skills,
-    .contact{
+    .contact {
+        margin:auto;
         width: 55%;
-    
-        
     }
 
-    
-
 }    
+
+@media screen and (min-width: 1024px) {
+
+    body{
+        font-size: 1.4em;
+    }
+
+}
