--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,11 @@
 /* TYPE SELECTORS */
 
 body{
+    background: linear-gradient( to top, transparent, grey 99%);
     font-family: 'Quicksand', sans-serif;
 }
 
 header{
-    background: linear-gradient( to top, transparent, grey 90%);
     padding-top: 1.1em;
     text-align: center;
     padding-bottom: 1em;
@@ -23,8 +23,37 @@ h1{
 
 a {
     text-decoration: none;
-    color: #234b09;
+    color: #424242;
 }
+
+footer {
+    border-top: solid 2px grey;
+    margin-top: 1em;
+    margin-bottom: .5em;
+    padding: .6em;
+}
+
+footer nav {
+    float: right;
+}
+
+footer h4{
+    margin-bottom: 1em;
+    float:left;
+}
+
+footer h4, 
+footer ul{
+display: inline-block;
+}
+
+footer li{
+    padding: 1.33em 0 0 0;
+    margin-left: 4em;
+    display: inline-block;
+}
+
+/* PSUEDO TYPE SELECTORS */
 
 a:hover{
     color: coral;
@@ -34,19 +63,6 @@ a:hover{
 a:active{
     color:rgb(90, 92, 247);
     transition: 0s;
-}
-
-footer{
-    margin-bottom: 2em;
-    border-top: solid 2px grey;
-}
-
-footer li{
-    padding: .6em;
-}
-
-footer h4{
-    margin-bottom: 1em;
 }
 
 /* CLASS SELECTORS */
@@ -71,15 +87,13 @@ footer h4{
 
 .profile-pic{
     width: 100%;
+    border-radius:.2em;
 }
 
 .content-image{
     width: 90%;
     margin-top: 3em;
-}
-
-.contact{
-    margin: 4em 0;
+    border-radius: .3em;
 }
 
 .contact a{
@@ -93,8 +107,11 @@ footer h4{
     margin-top: 1em;
 }
 
-.skills {
-    margin: 4em 0;
+.skills,
+.contact,
+#portfolio{
+    margin: 2em 0;
+    padding: 1em .5em;
 }
 
 .skills li {
@@ -105,7 +122,26 @@ footer h4{
     border-radius: 3px;
 }
 
+.hidden{
+    display: none;
+}
+
+/* CLASS PSEUDO SELECTORS */
+
+.group:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
 .skills li:nth-child(odd) { background:forestgreen}
+
+/* ID SELECTORS */
+
+#portfolio{
+    background-color: white;
+    border-radius: .15em;
+}
 
 /* @media styles */
 
@@ -115,6 +151,21 @@ footer h4{
         font-size: 1.08em;
     }
 
+    header{
+        font-size: .9em;
+        width: 90%;
+        text-align: center;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    header h1{
+        float: left;
+    }
+    header li{
+        display: inline-block;
+        float: right;
+    }
     .container-1,
     .intro{
         float:right;
@@ -136,6 +187,7 @@ footer h4{
     }
     
     .container-2{
+        max-height: 380px;
         float:right;
         width: 50%;
         padding-bottom: 1.06em;
@@ -143,6 +195,10 @@ footer h4{
 
     .container-2 p{
         padding: 0 5px;
+    }
+
+    #portfolio{
+        padding-bottom: 3em;
     }
 
     .group:after {
@@ -157,27 +213,8 @@ footer h4{
         width:80%;
     }
 
-    footer {
-        margin-top: 3em;
-    }
-
-    footer h4, 
-    footer ul{
-    display: inline-block;
-    }
-
-    footer h4{
-        float:left;
-    }
-    
-    footer nav {
-        float: right;
-    }
-    
-    footer li{
-        padding: 1.33em 0 0 0;
-        margin-left: 4em;
-        display: inline-block;
+    .hidden{
+        display: inline-block; 
     }
 }    
 
@@ -197,12 +234,8 @@ footer h4{
         margin:auto;
         width: 55%;
     }
-}    
 
-@media screen and (min-width: 1024px) {
-
-    body{
-        font-size: 1.4em;
+    #portfolio{
+        padding-bottom: 5em;
     }
-
-}
+}    
